# A3_220601023_FatmaCure

./: Dockerfile  README.md  entrypoint.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/command_server_pkg/lib/command_server_pkg/: command_server
install/command_server_pkg/share/command_server_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/command_server_pkg/share/command_server_pkg/cmake/: command_server_pkg__rosidl_typesupport_cExport-noconfig.cmake  command_server_pkg__rosidl_typesupport_cExport.cmake  command_server_pkg__rosidl_typesupport_cppExport-noconfig.cmake  command_server_pkg__rosidl_typesupport_cppExport.cmake  command_server_pkg__rosidl_typesupport_introspection_cExport-noconfig.cmake  command_server_pkg__rosidl_typesupport_introspection_cExport.cmake  command_server_pkg__rosidl_typesupport_introspection_cppExport-noconfig.cmake  command_server_pkg__rosidl_typesupport_introspection_cppExport.cmake  export_command_server_pkg__rosidl_generator_cExport-noconfig.cmake  export_command_server_pkg__rosidl_generator_cExport.cmake  (+7 more)
install/data_processor_pkg/lib/data_processor_pkg/: data_processor
install/data_processor_pkg/share/data_processor_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sensor_publisher_pkg/lib/sensor_publisher_pkg/: sensor_publisher
install/sensor_publisher_pkg/share/sensor_publisher_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
launch/: project.launch.py
src/command_server_pkg/: CMakeLists.txt  package.xml  setup.cfg
src/command_server_pkg/srv/: ComputeCommand.srv
src/data_processor_pkg/: package.xml  setup.cfg  setup.py
src/data_processor_pkg/data_processor_pkg/: data_processor.py
src/sensor_publisher_pkg/: package.xml  setup.cfg  setup.py
src/sensor_publisher_pkg/sensor_publisher_pkg/: sensor_publisher.py
